--- a/m(320).css
+++ b/m(320).css
@@ -11,15 +11,9 @@
 }
 /*  */
 .left_top input {
-  width: 350px;
-  height: 40px;
-  border-radius: 5px;
-  border: 0.5px solid gray;
   display: none;
 }
 .right_top p {
-  margin-bottom: -0.1rem;
-  font-weight: 500;
   display: none;
 }
 /*  */
@@ -49,6 +43,7 @@
   display: flex;
   margin-top: 30px;
   gap: 15px;
+  justify-content: center;
 }
 
 .banner .inner_banner .right_banner .img_1_right_banner {
@@ -143,15 +138,13 @@
   padding-top: 30px;
   background: #fafafa;
   text-align: center;
-  /* display: flex;
-  justify-content: center; */
 }
 
 .courses_section .inner_courses_section {
   width: 95%;
   display: grid;
-  /* justify-content: space-between; */
   margin-top: 20px;
+  justify-content: center;
 }
 
 .courses_section .course_list {
@@ -167,6 +160,7 @@
   row-gap: 10px;
   column-gap: 10px;
   margin-top: 50px;
+  justify-content: center;
 }
 /*  */
 #card-container.active {
@@ -195,10 +189,6 @@
   padding-top: 20px;
   padding-right: 10px;
 }
-
-/*  */
-
-/*  */
 
 /*  */
 .popular_course .outer_popular {
